# ChessMate

./: .gitignore  README.md  bedrock_setup.py  chess_mate.py  pyproject.toml  report.html  report.qmd
data/: chess_fens_by_phase.json  chess_questions.txt  eval_early.json  eval_end.json  eval_mid.json
notebooks/: KB_evaluation.ipynb  combine_move_db.ipynb  faiss_to_pinecone.ipynb  fen_to_natural_language.ipynb  gameplay_evaluation.ipynb  knowledge_base.ipynb  knowledgebase_agent.ipynb  move_database.ipynb  puzzle_agents.ipynb  recommendation_agent.ipynb
src/: gameplay_agent.py  multi_agent_supervisor.py  puzzle_agent.py  tutorial_agent.py
